replaced placeholder content for starters section in menu.html

--- a/menu.html
+++ b/menu.html
@@ -81,23 +81,23 @@
         <div id="starters" class="menu-section-wrapper">
             <div class="menu-section-txt">
                 <h2>Starters</h2>
-                <h3>Soup1</h3>
+                <h3>Tortilla</h3>
                 <p>
-                    Soup made of something served with something <br>
-                    and something else too. <br>
-                    €205.99
+                    Traditional Torilla with Cheese and Tomato<br>
+                    Served with a Spinach Salad and a Fig Sauce.<br>
+                    €11,-
                 </p>
-                <h3>Soup</h3>
+                <h3>Gazpachio</h3>
                 <p>
-                    Soup made of something served with something <br>
-                    and something else too. <br>
-                    €205.99
+                    Cold Tomato soup <br>
+                    Served with garlic Bread and Green Olive Pesto. <br>
+                    €13,-
                 </p>
-                <h3>Soup</h3>
+                <h3>Lobster Bouillabaisse</h3>
                 <p>
-                    Soup made of something served with something <br>
-                    and something else too. <br>
-                    €205.99
+                    Traditional French Lobster Stew <br>
+                    Served with Cream Fraiche. <br>
+                    €19.-
                 </p>
             </div>
             <!-- starters image -->
