minor change to image order in gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -47,10 +47,10 @@
             <!-- gallery images -->
             <img src="assets/images/gallery/caramel-desert.webp" alt="A picture of an icecream desert with caramel sauce">
             <img src="assets/images/gallery/cut-bread.webp" alt="A picture of a couple of pieces of hand-made bread">
-            <img src="assets/images/gallery/cutting-veg.webp" alt="A picture of domeone cutting vegetables">
-            <img src="assets/images/gallery/eggplant-dish_cuttingboard.webp" alt="A picture of an eggplant dish.">
-            <img src="assets/images/gallery/fresh-bowl.webp" alt="A picture of a plate with a fresh Salmon meal">
+            <img src="assets/images/gallery/cutting-veg.webp" alt="A picture of someone cutting vegetables">
             <img src="assets/images/gallery/grilled-veg.webp" alt="A picture of some grilled vegetables">
+            <img src="assets/images/gallery/fresh-bowl.webp" alt="A picture of a plate with a fresh Salmon meal">
+            <img src="assets/images/gallery/eggplant-dish_cuttingboard.webp" alt="A picture of an eggplant dish.">
             <img src="assets/images/gallery/kitchen-tools.webp" alt="A picture of some kitchen utensils hanging on a wall.">
             <img src="assets/images/gallery/peeling-courgette.webp" alt="A picture of someone peeling courgette">
             <img src="assets/images/gallery/salad-orange-juice.webp" alt="A picture of a salad and some orange-juice">
