updated content and styling for about.html

--- a/about.html
+++ b/about.html
@@ -49,9 +49,15 @@
         <!-- 'About us" article -->
         <article id="about-txt">
             <h2>About us:</h2>
-            <p>Welcome to Hole in the Wall! <br> <br>
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <p>Welcome to Hole in the Wall! <br>
+                Here you will find a wide assortment of dishes, inspired by <br>
+                traditional (street)foods from all over the world. <br>
+                Adapted for our restaurant with our own little twists. <br>
+                <br>
+                The inspiration for opening our restaurant came from traveling the world, <br>
+                tasting all the different dishes that belong the different cultures. <br>
+                Often sold through a "Hole in the Wall". <br>
+                Enjoy!
             </p>
         </article>
     </section>
