--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             </select>
         </nav>
     </header>
-    <section id="about">
+    <div id="about">
         <!-- "About us' image -->
         <img src="assets/images/indoor-shot_1000x1500.webp" id="about-img" alt="A picture of the restaurant's interior">
         <!-- 'About us" article -->
@@ -60,7 +60,7 @@
                 Enjoy!
             </p>
         </article>
-    </section>
+    </div>
     <footer>
         <!-- Direct link to contact page -->
         <a href="contact.html" id="footer-contact-link" aria-label="Jump directly to our contact page"><h1>Reservations</h1></a>
