replaced section with div to comply with markup validation

--- a/gallery.html
+++ b/gallery.html
@@ -43,7 +43,7 @@
             </select>
         </nav>
     </header>
-    <section id="gallery">
+    <div id="gallery">
             <!-- gallery images -->
             <img src="assets/images/gallery/caramel-desert.webp" alt="A picture of an icecream desert with caramel sauce">
             <img src="assets/images/gallery/cut-bread.webp" alt="A picture of a couple of pieces of hand-made bread">
@@ -55,7 +55,7 @@
             <img src="assets/images/gallery/peeling-courgette.webp" alt="A picture of someone peeling courgette">
             <img src="assets/images/gallery/salad-orange-juice.webp" alt="A picture of a salad and some orange-juice">
             <img src="assets/images/gallery/vegan-meal.webp" alt="A picture of a healthy vegan meal">
-    </section>
+    </div>
     <footer>
         <!-- Direct link to contact page -->
         <a href="contact.html" id="footer-contact-link" aria-label="Jump directly to our contact page"><h1>Reservations</h1></a>
