added css validation to README.md, fixed Webaim error in contact.html

--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
                     <label for="group">Group Size</label>
                     <input type="number" id="group" name="group" required>
                     <br>
-                    <input type="submit">
+                    <input type="submit" value="Submit">
                     <p>You will álways receive confirmation via email ánd telephone.</p>
                 </form>
             </div>
