fixed skipped header in contact page and relevant css

--- a/contact.html
+++ b/contact.html
@@ -53,14 +53,14 @@
             <!-- Restaurant adress/contact info -->
             <div id="adress-wrapper">
                 <div id="adress">
-                    <h4>Hole in the Wall</h4>
-                    <h5>Prinsengracht 80</h5>
-                    <h5>2512 GC</h5>
-                    <h5>Den Haag NL</h5>
+                    <h3>Hole in the Wall</h3>
+                    <h4>Prinsengracht 80</h4>
+                    <h4>2512 GC</h4>
+                    <h4>Den Haag NL</h4>
                 </div>
                 <div id="contact-info">
-                    <h4>email@adres.org</h4>
-                    <h4>070-4084540</h4>
+                    <h3>Holeinthewall@gmail.com</h3>
+                    <h3>070-4084540</h3>
                 </div>
             </div>
             <!-- Reservations form -->
