single bit of JS taken from stack overflow

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                 </li>
             </ul>
             <!-- dropdown menu for site navigation at low resolutions -->
+                <!-- JS code to make dropdown menu change current page taken from: 
+                     https://stackoverflow.com/questions/24582056/html-select-menu-as-navigation-menu  -->
             <select onchange="window.open(this.value,'_self');" id="nav-dropdown" aria-label="Dropdown menu for site navigation">
                 <option value="#">Home</option>
                 <option value="about.html">About</option>
