added opening times to contact.html

--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,7 @@
                 <div id="contact-info">
                     <h3>Holeinthewall@gmail.com</h3>
                     <h3>070-4084540</h3>
+                    <h3>Tue-Sun: 17:00-23:00</h3>
                 </div>
             </div>
             <!-- Reservations form -->
