updated menu contact

--- a/menu.html
+++ b/menu.html
@@ -85,13 +85,13 @@
                 <h2>Starters</h2>
                 <h3>Tortilla</h3>
                 <p>
-                    Traditional Torilla with Cheese and Tomato<br>
-                    Served with a Spinach Salad and a Fig Sauce.<br>
+                    Traditional Torilla with Cheese and Tomato.<br>
+                    Served with a Spinach salad and a Fig sauce.<br>
                     €11,-
                 </p>
                 <h3>Gazpachio</h3>
                 <p>
-                    Cold Tomato soup <br>
+                    Chilled Tomato soup.<br>
                     Served with garlic Bread and Green Olive Pesto. <br>
                     €13,-
                 </p>
@@ -109,23 +109,23 @@
         <div id="mains" class="menu-section-wrapper">
             <div class="menu-section-txt">
                 <h2>Mains</h2>
-                <h3>Soup2</h3>
+                <h3>Red Lentil Soup</h3>
                 <p>
-                    Soup made of something served with something <br>
-                    and something else too. <br>
-                    €205.99
+                    A creamy Red Lentil soup <br>
+                    served with grilled Cauliflower and Jerusalem Artichoke.<br>
+                    €16.-
                 </p>
-                <h3>Soup</h3>
+                <h3>Shrimp Taglitelle</h3>
                 <p>
-                    Soup made of something served with something <br>
-                    and something else too. <br>
-                    €205.99
+                    Tagliatelle in a creamy Shrimp sauce <br>
+                    served with Grilled Asparagus.<br>
+                    €19.-
                 </p>
-                <h3>Soup</h3>
+                <h3>Ray wing</h3>
                 <p>
-                    Soup made of something served with something <br>
-                    and something else too. <br>
-                    €205.99
+                    Fried Ray wing <br>
+                    Served with a Seleriac mash and steamed vegetables. <br>
+                    €21.-
                 </p>
             </div>
             <!-- main courses image -->
@@ -135,23 +135,23 @@
         <div id="deserts" class="menu-section-wrapper">
             <div class="menu-section-txt">
                 <h2>Deserts</h2>
-                <h3>Soup3</h3>
+                <h3>Chocolate tart</h3>
                 <p>
-                    Soup made of something served with something <br>
-                    and something else too. <br>
-                    €205.99
+                    A Tart made of pure Chocolate <br>
+                    Served with a mint syrup.
+                    €12.-
                 </p>
-                <h3>Soup</h3>
+                <h3>Curd Hang Up</h3>
                 <p>
-                    Soup made of something served with something <br>
-                    and something else too. <br>
-                    €205.99
+                    Fresh curdled yoghurt<br>
+                    served with a Fig and Plum coulis. <br>
+                    €13.-
                 </p>
-                <h3>Soup</h3>
+                <h3>Lemon Merengue</h3>
                 <p>
-                    Soup made of something served with something <br>
-                    and something else too. <br>
-                    €205.99
+                    A slice of Lemon Merengue pie <br>
+                    served with candied Mandarin slices and whipped Cream<br>
+                    €12.-
                 </p>
             </div>
             <!-- deserts image -->
@@ -161,23 +161,11 @@
         <div id="drinks" class="menu-section-wrapper">
             <div class="menu-section-txt">
                 <h2>Drinks</h2>
-                <h3>Soup4</h3>
+                <h3><br></h3>
                 <p>
-                    Soup made of something served with something <br>
-                    and something else too. <br>
-                    €205.99
-                </p>
-                <h3>Soup</h3>
-                <p>
-                    Soup made of something served with something <br>
-                    and something else too. <br>
-                    €205.99
-                </p>
-                <h3>Soup</h3>
-                <p>
-                    Soup made of something served with something <br>
-                    and something else too. <br>
-                    €205.99
+                    A wide assortment of wines, beers is available.<br>
+                    Ask your server for our current selection.<br>
+                    Starting at €3.-
                 </p>
             </div>
             <!-- drinks image -->
@@ -187,23 +175,23 @@
         <div id="bites" class="menu-section-wrapper">
             <div class="menu-section-txt">
                 <h2>Bites</h2>
-                <h3>Soup5</h3>
+                <h3>Cheese platter</h3>
                 <p>
-                    Soup made of something served with something <br>
-                    and something else too. <br>
-                    €205.99
+                    A selection of fine cheeses <br>
+                    served with a Fig syrup and bread. <br>
+                    €14.-
                 </p>
-                <h3>Soup</h3>
+                <h3>Springrolls</h3>
                 <p>
-                    Soup made of something served with something <br>
-                    and something else too. <br>
-                    €205.99
+                    Handrolled Springrolls <br>
+                    Deep fried, served with a homemade Chilli sauce. <br>
+                    €9.-
                 </p>
-                <h3>Soup</h3>
+                <h3>Party snacks</h3>
                 <p>
-                    Soup made of something served with something <br>
-                    and something else too. <br>
-                    €205.99
+                    A selection of deep fried snacks <br>
+                    Served with Truffel Mayonaise and Dijon Nusterd. <br>
+                    €11.-
                 </p>
             </div>
             <!-- bites image -->
