minor styling tweaks

--- a/menu.html
+++ b/menu.html
@@ -213,6 +213,7 @@
                 aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
+    <div class="footer-spacing"></div>
     <!-- FONT-AWESOME SCRIPT (CODE TAKEN FROM FONT-AWESOME SITE) -->
     <script src="https://kit.fontawesome.com/3920a9a7fd.js" crossorigin="anonymous"></script>
 </body>
