added spacing divs to index.html

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             </select>
         </nav>
     </header>
+    <div class="header-spacing"></div>
     <!-- Background image -->
     <section id="home-bg" aria-label="A picture of a restaurant table with view of a terras."></section>
     
@@ -58,6 +59,7 @@
             <a href="https://www.instagram.com" target="_blank" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
+    <div class="footer-spacing"></div>
     <!-- FONT-AWESOME SCRIPT (CODE TAKEN FROM FONT-AWESOME SITE) -->
     <script src="https://kit.fontawesome.com/3920a9a7fd.js" crossorigin="anonymous"></script>
 </body>
