--- a/about.html
+++ b/about.html
@@ -45,6 +45,7 @@
             </select>
         </nav>
     </header>
+    <div class="header-spacing"></div>
     <div id="about">
         <!-- "About us' image -->
         <img src="assets/images/indoor-shot_1000x1500.webp" id="about-img" alt="A picture of the restaurant's interior">
@@ -73,6 +74,7 @@
             <a href="https://www.instagram.com" target="_blank" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
+    <div class="footer-spacing"></div>
     <!-- FONT-AWESOME SCRIPT (CODE TAKEN FROM FONT-AWESOME SITE) -->
     <script src="https://kit.fontawesome.com/3920a9a7fd.js" crossorigin="anonymous"></script>
 </body>
