improved resp design for contact.html

--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@
             </select>
         </nav>
     </header>
+    <div class="header-spacing"></div>
     <!-- Contact section -->
     <section>
         <div id="contact-wrapper">
