--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +11,6 @@
     <!-- Favicon -->
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
-
 <body>
     <header>
         <!-- navigation bar and logo - main site navigation -->
@@ -171,7 +169,7 @@
             <!-- drinks image -->
             <img class="menu-section-img" src="assets/images/menu/drinks-img.webp" alt="A picture of a Mojito">
         </div>
-        <!-- Menu bites section (items) -->
+        <!-- Menu: bites section (items) -->
         <div id="bites" class="menu-section-wrapper">
             <div class="menu-section-txt">
                 <h2>Bites</h2>
