--- a/menu.html
+++ b/menu.html
@@ -148,7 +148,7 @@
                 <h3>Lemon Merengue</h3>
                 <p>
                     A slice of Lemon Merengue pie <br>
-                    served with candied Mandarin slices and whipped Cream<br>
+                    served with candied Mandarin slices.<br>
                     €12.-
                 </p>
             </div>
